# Hanoi_RL

./: .gitignore  DISSERTATION_PROJECT_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
configs/algorithms/: a2c.yaml  dqn.yaml  ppo.yaml  q_learning.yaml
configs/env/: base.yaml
configs/experiments/: pilot_sb3.yaml  scaling.yaml  zero_shot.yaml
src/hanoi_rl/: __init__.py
src/hanoi_rl/agents/: __init__.py  tabular_q_learning.py
src/hanoi_rl/analysis/: __init__.py  metrics.py  plots.py  tables.py
src/hanoi_rl/baselines/: __init__.py  random_policy.py  recursive_solver.py
src/hanoi_rl/envs/: __init__.py  encoding.py  reward.py  tower_of_hanoi_env.py
src/hanoi_rl/training/: __init__.py  common.py  evaluate.py  run_pilot_sweeps.py  train_sb3.py  train_tabular.py
src/hanoi_rl/utils/: __init__.py  io.py  logging.py  seeding.py
src/hanoi_rl/visualisation/: __init__.py  manim_scenes.py
tests/: test_encoding.py  test_env.py  test_reward.py  test_solver.py  test_tabular.py  test_training_smoke.py
