[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanoi-rl"
version = "0.1.0"
description = "Tower of Hanoi reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "gymnasium>=0.29,<1.2",
  "matplotlib>=3.8,<4",
  "manim>=0.18,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyyaml>=6.0,<7",
  "stable-baselines3>=2.3,<3",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]
